--- a/src/components/common/Navbar.css
+++ b/src/components/common/Navbar.css
@@ -2,6 +2,14 @@
   background-color: #243a51; /* navy blue */
 }
 
+.navbar {
+  position: sticky; /* or fixed */
+  top: 0;
+  z-index: 1000;
+  background-color:#243a51;  /* match your theme */
+}
+
+
 .custom-navbar .nav-link {
   color: rgba(255, 255, 255, 0.9) !important;
   margin-left: 15px;
@@ -18,3 +26,21 @@
   font-weight: bold;
   color: white;
 }
+
+.modal-backdrop-custom {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background-color: white;
+  border-radius: 10px;
+}
+
