--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,5 +1,5 @@
 .dashboard-container {
-  padding: 2rem;
-  background-color: blue;
+  /* padding: 50px; */
+  background-color: rgb(255, 255, 255);
   border-radius: 8px;
 }
